<resources>
    <string name="app_name">Currency Exchanger</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="header_login">Sign in</string>
    <string name="header_desc_login">Login to your account to access all the feature.</string>
    <string name="hint_login_email_edit_text">Enter your email</string>
    <string name="hint_login_password_edit_text">Password</string>
    <string name="button_text_login">Sign in</string>
    <string name="button_text_dont_have_account">I don\'t have an account</string>
    <string name="button_text_ok">Ok</string>
    <string name="error_email_not_valid">Email is not valid</string>
    <string name="error_password_not_valid">Password is not valid</string>
    <string name="header_register">Sign up</string>
    <string name="header_desc_register">Create an account to get access to all the feature</string>
    <string name="button_text_back">Back</string>
    <string name="hint_register_name">Your full name</string>
    <string name="button_text_register">Create account</string>
    <string name="error_name_not_valid">Name is not valid</string>
    <string name="main_fragment_home">Primary</string>
    <string name="main_fragment_detail">Detail</string>
    <string name="hint_product_name">Product name</string>
    <string name="hint_product_price">Price</string>
    <string name="button_text_update">Update</string>
    <string name="button_text_delete">Delete</string>
    <string name="error_product_name_not_valid">Product name is not valid</string>
    <string name="error_price_not_valid">Price is not valid</string>
    <string name="hint_register_email">Your email</string>
    <string name="hint_register_password">Password</string>
    <string name="content_desc_create_new_product">Create new product</string>
    <string name="button_text_save">Save</string>
    <string name="main_fragment_create">Create</string>
    <string name="action_signout">Sign out</string>
    <string name="current_balance">Current Balance</string>
    <string name="current_converter">Currency Converter</string>
    <string name="transactions_history">Transactions History</string>
    <string name="usd_available_balance">$ available balance</string>
    <string name="usd_amount">$ 350.67</string>
    <string name="euro_available_balance">available balance</string>
    <string name="euro_amount">€ 250.01</string>
    <string name="flexible">flexible</string>
    <string name="sub_title">Easy stake wth higher returns</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="think_different_think_exchange">Think Different,Think\nExchange</string>
    <string name="commission_fee">Commission fee</string>
    <string name="_0_70_eur">0.70 EUR</string>
    <string name="british_pound">British Pound</string>
    <string name="usd">United States Dollar</string>
    <string name="euro">Euro</string>
    <string name="exchange">Exchange</string>
    <string name="okay">Okay</string>
    <string name="network">Network Not Connected</string>
    <string name="currency_picker">CURRENCY_PICKER</string>
    <string name="select_currency">Select Currency</string>
    <string name="enter_amount">Please enter amount</string>
    <string name="euro_code">EUR</string>
    <string name="usd_code">USD</string>
    <string name="zero_fee">0.00 EUR</string>
    <string name="decimal_value">00.00</string>
    <string name="success_create">success_create</string>
    <string name="same_currency_text">You selected same currency.Please use other currency. Thanks for your patience!</string>
</resources>