<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginEnd="@dimen/_5sdp"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/radius_default"
    android:layout_marginRight="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/_100sdp"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/background_ui"
            android:minHeight="@dimen/_100sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
          >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_first_dynamic"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="@dimen/_5sdp"
                app:riv_corner_radius="100dp" />
            <TextView
                android:id="@+id/txt_euro_available_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"

                android:text="@string/euro_available_balance"
                android:textColor="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/_10ssp"
                android:textAlignment="center"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:gravity="center_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_first_dynamic"
                android:layout_marginLeft="@dimen/_5sdp" />

            <TextView
                android:id="@+id/txt_available_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"


                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/euro_amount"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_euro_available_balance"
                android:gravity="center_horizontal" />


            <TextView
                android:id="@+id/txt_active"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/capsule_background"

                android:fontFamily="sans-serif-condensed-medium"
                android:paddingTop="@dimen/_1sdp"
                android:text="@string/flexible"
                android:textAlignment="center"
                android:textColor="@color/white"

                android:textSize="@dimen/_9ssp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_available_amount" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>