<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/_15sdp"
    android:background="@color/background_color"
    android:layout_marginEnd="@dimen/_15sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.main.history.ExchangeHistoryFragment">
    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/black"
        android:text="@string/current_converter"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/_5sdp" />

    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:id="@+id/wallet_table_header_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_3sdp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/text_wallet_table_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/_34sdp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/commission_fee"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="@dimen/_25sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_box_brand"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_wallet_table_money"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:focusable="false"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:text="@string/_0_70_eur"
                    android:textColor="@color/black"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:id="@+id/lockedBlackRect22"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:background="@drawable/background_drawable_exchange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        android:layout_marginLeft="@dimen/_5sdp" />










    <LinearLayout
        android:id="@+id/wallet_table_fourth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginStart="@dimen/_5sdp"
        android:background="@drawable/background_drawable_exchange"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@+id/lockedBlackRect24"
        app:layout_constraintEnd_toEndOf="@+id/lockedBlackRect24"
        app:layout_constraintStart_toStartOf="@+id/lockedBlackRect24"
        app:layout_constraintTop_toTopOf="@+id/lockedBlackRect24">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"


            android:layout_weight="1"

            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_wallet_dynamic"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"

                    android:layout_marginLeft="20dp"
                    app:riv_corner_radius="100dp" />


                <TextView
                    android:id="@+id/text_currency_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/img_wallet_dynamic"
                    android:layout_alignLeft="@+id/img_wallet_dynamic"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_35sdp"
                    android:layout_marginRight="@dimen/_35sdp"
                    android:layout_toEndOf="@+id/wallet_spinner"
                    android:layout_toRightOf="@+id/wallet_spinner"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/euro"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />


                <ImageView
                    android:id="@+id/wallet_spinner"

                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_box_brand"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_selected_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="$"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText

                    android:id="@+id/text_wallet_table_user_select_currency"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:background="@null"
                    android:textAlignment="center"
                    android:hint="00.00"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_10ssp"  />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
    <View
        android:layout_marginStart="@dimen/_5sdp"
        android:id="@+id/lockedBlackRect24"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lockedBlackRect22" />


    <LinearLayout
        android:id="@+id/lin_euro_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginStart="@dimen/_5sdp"
        android:background="@drawable/background_drawable_exchange"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@+id/lockedBlackRect25"
        app:layout_constraintEnd_toEndOf="@+id/lockedBlackRect25"
        app:layout_constraintStart_toStartOf="@+id/lockedBlackRect25"
        app:layout_constraintTop_toTopOf="@+id/lockedBlackRect25">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"


            android:layout_weight="1"

            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_second_dynamic"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"

                    android:layout_marginLeft="20dp"
                    app:riv_corner_radius="100dp" />


                <TextView
                    android:id="@+id/text_second_currency_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/img_second_dynamic"
                    android:layout_alignLeft="@+id/img_second_dynamic"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_35sdp"
                    android:layout_marginRight="@dimen/_35sdp"
                    android:layout_toEndOf="@+id/second_spinner"
                    android:layout_toRightOf="@+id/second_spinner"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/usd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />


                <ImageView
                    android:id="@+id/second_spinner"

                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_second_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_box_brand"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_second_user_selected_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="$"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText

                    android:id="@+id/text_second_user_select_currency"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:background="@null"
                    android:textAlignment="center"
                    android:hint="00.00"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_10ssp"  />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
    <View
        android:layout_marginStart="@dimen/_5sdp"
        android:id="@+id/lockedBlackRect25"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lockedBlackRect24" />
    <Button
        android:id="@+id/btn_send"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_width="0dp"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginBottom="16dp"
        android:text="@string/exchange"
        android:background="@drawable/capsule_background"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/lockedBlackRect25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>